--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 :root {
   --primary-white: #fff;
   --primary-orange: #f9ab00;
-  --primary-dark: rgba(255,255,255,0);
+  --primary-dark: rgb(105,105,105);
+  --primary-dark: rgb(61,61,61);
   --primary-red: #ef4035;
   --primary-hover-red: #f33501; 
 }
@@ -177,3 +178,68 @@ nav ul li {
   background: var(--primary-white);
 }
 
+/***----------------Education--------------------***/
+
+.education-wrapper{
+  position: relative;
+  padding: 3.125rem 0;
+  overflow: hidden;
+
+}
+
+.education h1 {
+  text-transform: uppercase;
+  color: var(--primary-orange);
+}
+
+.education-wrapper::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  margin-left: -0.0525rem;
+  width: 0.125em;
+  height: 100%;
+  background: grey;
+  z-index: 1;
+
+}
+
+.timeline-block {
+  width: calc(50% + 0.5rem);
+  display: flex;
+  justify-content: space-between;
+  clear: both;
+}
+
+.timeline-block-right {
+  float: right;
+}
+
+.timeline-block-left {
+  float: left;
+  direction: rtl;
+}
+
+.marker {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;;
+  border: 0.3125rem solid var(--primary-dark);
+  background: var(--primary-orange);
+  margin-top: 0.625rem;
+  z-index: 3;
+}
+
+.timeline-content {
+  width: 95%;
+  padding: 0 0.935rem;
+  color: grey;
+  direction: ltr;
+}
+
+.timeline-content h3 {
+margin-top: 00.3125rem;
+color: dark;
+font-weight: 600;
+}
