--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 :root {
   --primary-white: #fff;
   --primary-orange: #f9ab00;
-  --primary-dark: rgb(105,105,105);
+  --primary-dark: rgb(65,65,65);
   --primary-dark: rgb(61,61,61);
   --primary-red: #ef4035;
   --primary-hover-red: #f33501; 
@@ -37,7 +37,7 @@ nav ul li {
   margin-right: 0.75rem;
   margin-left: 0.75rem;
   color: var(--primary-white) !important;
-  border-top: 0.1875rem solid var(--primary-dark);
+  
 }
 
 .navbar-brand {
@@ -134,6 +134,20 @@ nav ul li {
   background:rgb(196, 195, 194);
 }
 
+.pharagraph{
+
+  text-align: left;
+  padding: auto;
+  
+}
+
+.heading4{
+
+  text-align: left;
+  padding: auto;
+  
+}
+
 .experience h1 {
   color: dark;
   text-transform: uppercase;
@@ -163,6 +177,7 @@ nav ul li {
   padding: 00.625rem;
   margin-bottom: 1.875rem;
   background: var(--primary-white);
+  transition: 0.4s ease-in-out;
 }
 
 .experience .box:hover {
@@ -243,3 +258,115 @@ margin-top: 00.3125rem;
 color: dark;
 font-weight: 600;
 }
+
+/************Contacts************/
+.contacts {
+  background: #f0f0da;
+  padding: 3rem 0;
+}
+
+.contacts h1 {
+  color: var(--primary-orange);
+  padding: 1.3rem 0;
+  text-transform: uppercase;
+}
+
+.contacts p {
+  color: #2996d4;
+  font-size: 1.5rem;
+}
+
+/*------------------ Inputs---------------------*/
+.contacts input, .contacts textarea {
+  width: 100%;
+  box-sizing: border-box;
+  background: none;
+  resize: none;
+  border: 0;
+  border-bottom: 0.125rem solid var(--primary-dark-grey);
+  border-radius: 0;
+  color: var(--primary-orange);
+  outline: 0 !important;
+  box-shadow: none !important;
+  margin-bottom: 1rem;
+  padding-left: 0 !important;
+}
+
+.contacts .container {
+  padding: 4rem 0;
+}
+
+.contacts input:focus, .contacts textarea:focus {
+  background: transparent;
+  color: var(--primary-orange);
+  border-bottom: 0.125rem solid var(--primary-dark-grey);
+}
+
+.contacts textarea {
+  height: 12.2rem !important;
+}
+
+.contact-btn {
+  margin: 1rem 0 0 0;
+  width: 100%;
+  background: none;
+  text-decoration: #244a92;
+}
+
+.line {
+  position: relative;
+  top: -0.8rem;
+  width: 0;
+  height: 0.125rem;
+  background: var(--primary-orange);
+  display: inline-block;
+}
+
+input:focus+.line, textarea:focus+.line {
+  width: 100%;
+  transition: width 0.5s ease-in-out;
+}
+
+input.form-control {
+  margin: -0.3rem 0;
+}
+
+textarea.form-control {
+  margin: -0.3rem 0;
+}
+
+.error-message {
+  color: var(--primary-white);
+  background: var(--primary-hover-red);
+  text-align: left;
+}
+
+.success-message {
+  font-weight: 900;
+  color: var(--primary-green);
+}
+
+
+/****************Footer******************/
+.footer {
+  background: var(--primary-black);
+  color: var(--primary-dark-grey);
+  padding: 3rem;
+}
+
+.footer a {
+  text-decoration: none;
+  color: var(--primary-dark-grey);
+}
+
+.footer a:hover {
+  text-decoration: none;
+  color: var(--primary-orange);
+  cursor:pointer;
+}
+
+.footer p {
+  margin-bottom: 0;
+}
+
+
